Update title text.

--- a/node-web-server/public/index.html
+++ b/node-web-server/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Hotspot Test Site</title>
+    <title>Hotspot Test Site Updated</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
